--- a/ritus-client/package.json
+++ b/ritus-client/package.json
@@ -7,7 +7,10 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "dev:tableonly": "vite --mode tableonly",
+    "build:tableonly": "vite build --outDir dist-tableonly --mode tableonly",
+    "preview:tableonly": "vite preview --outDir dist-tableonly"
   },
   "dependencies": {
     "@chakra-ui/react": "^3.14.2",
