Transcription is working again

--- a/.gitignore
+++ b/.gitignore
@@ -224,3 +224,6 @@ ritus-client/src/config.js
 ritus-server/config.py
 ritus-server/config.py
 ritus_plus.zip
+ritus-server/config.py
+ritus-server/config.py
+ritus-server/config.py
