IIIF select fixed

--- a/.gitignore
+++ b/.gitignore
@@ -227,3 +227,5 @@ ritus_plus.zip
 ritus-server/config.py
 ritus-server/config.py
 ritus-server/config.py
+ritus-server/config.py
+/ritus-server/party
